[package]
name = "srtm_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.17"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.5"
thiserror = "2.0"
rayon = "1.10"
futures-lite = "2.6.1"
